some new change to the page.

--- a/site/site.html
+++ b/site/site.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! It's amazing to be able to master coding!</h1>
+<h1>Hello Coursera! Its amazing to be able to master coding!</h1>
 </body>
 </html>
